# catfs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clang-format.py  do_cmake.sh  fix_clang.sh
src/: main.cpp
src/fs/: fs.cpp  fs.h  fs_dir.cpp  fs_file.cpp  fsa.cpp  fsa.h  fuse.h  open_dir.h  open_file.cpp  open_file.h
src/fs/freader/: freader.h  freader_direct.cpp  freader_direct.h
src/fs/fwriter/: fwriter.h  fwriter_seq.cpp  fwriter_seq.h  fwriter_seq_part.h
src/meta/: meta.cpp  meta.h  meta_impl.cpp  meta_impl.h  meta_local.h  meta_local_mem.cpp  meta_local_mem.h  meta_local_redis.h
src/stor/: minio.h  stor.h  stor_s3.cpp  stor_s3.h  stor_us3.h
src/types/: dentry.h  dirent.h  errors.h  file.h  ftreenode.h  handle.h  inode.h  obj.h  rtfile.h
src/util/: time.h
tmp/: main  main.cpp
